<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/male_condoms_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible">
        <TextView
            android:id="@+id/tv_type_label_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/type_label"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_type_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="Male Condoms"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_type_label_male"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_quantity_label_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/quantity_label"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tv_quantity_male"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_quantity_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="3000" />

        <TextView
            android:id="@+id/tv_brand_label_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/brand_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_type_label_male" />

        <TextView
            android:id="@+id/tv_brand_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="MSD Condoms"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_brand_label_male"
            app:layout_constraintTop_toBottomOf="@id/tv_type_male" />

        <TextView
            android:id="@+id/tv_issuing_organization_male_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/issuing_organization_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_brand_label_male" />

        <TextView
            android:id="@+id/tv_issuing_organization_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="MSD"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_issuing_organization_male_label"
            app:layout_constraintTop_toBottomOf="@id/tv_brand_male" />

        <TextView
            android:id="@+id/tv_restocking_date_label_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_issuing_organization_male_label" />

        <TextView
            android:id="@+id/tv_restocking_date_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="31-05-2022"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_restocking_date_label_male"
            app:layout_constraintTop_toBottomOf="@id/tv_issuing_organization_male" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/dark_grey"
            app:layout_constraintTop_toBottomOf="@id/tv_restocking_date_male"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/female_condoms_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/male_condoms_details"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tv_type_label_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/type_label"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_type_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="Male Condoms"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_type_label_female"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_quantity_label_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/quantity_label"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tv_quantity_female"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_quantity_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="3000" />

        <TextView
            android:id="@+id/tv_brand_label_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/brand_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_type_label_female" />

        <TextView
            android:id="@+id/tv_brand_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="MSD Condoms"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_brand_label_female"
            app:layout_constraintTop_toBottomOf="@id/tv_type_female" />


        <TextView
            android:id="@+id/tv_issuing_organization_female_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/issuing_organization_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_brand_label_female" />

        <TextView
            android:id="@+id/tv_issuing_organization_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="MSD"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_issuing_organization_female_label"
            app:layout_constraintTop_toBottomOf="@id/tv_brand_female" />

        <TextView
            android:id="@+id/tv_restocking_date_label_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_issuing_organization_female_label" />

        <TextView
            android:id="@+id/tv_restocking_date_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="31-05-2022"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_restocking_date_label_female"
            app:layout_constraintTop_toBottomOf="@id/tv_issuing_organization_female" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/dark_grey"
            app:layout_constraintTop_toBottomOf="@id/tv_restocking_date_female"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>